# pointer-ton

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  .vercelignore  ADDONS.md  AGENTS.md  AXIOM_READY_EXECUTION_REPORT.md  DATA_GAP_AND_API_BLOCKERS.md  DEFERRALS.md  FINAL_PRE_EXTENSION_CERTIFICATION_AUDIT.md  FINAL_PRODUCTION_READINESS_COMPLETE.md  FINAL_PRODUCTION_READINESS_PLAN.md  FOUNDER_BETA_EXECUTION_REPORT.md  FOUNDER_BETA_READINESS_REPORT.md  HANDOFF.md  PHASE1_IMPLEMENTATION_REPORT.md  POINTER_ARCHITECTURE_AUDIT.md  POINTER_EXTENSION_READINESS_AUDIT.md  POINTER_EXTENSION_READINESS_AUDIT_V2.md  POINTER_FINAL_CERTIFICATION_PASS.md  PRODUCTION_READINESS_MASTER_REPORT.md  README.md  REALTIME_INGESTION_REPORT.md  SECURITY-TEST-REPORT.md  WALLET_DATA_INVENTORY_REPORT.md  WALLET_INTELLIGENCE_IMPLEMENTATION_REPORT.md  WALLET_INTELLIGENCE_MORALIS_AUDIT.md  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
anchor/: Anchor.toml  README.md
anchor/programs/pointer-fee/: Cargo.toml
anchor/programs/pointer-fee/src/: lib.rs
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
docs/: ACCOUNT_FREEZE.md  AI_ACCESS.md  AI_PIPELINE_SECURITY.md  CICD.md  CLAUDE_CODE_QA_PROMPT.md  DATA_FLYWHEEL.md  DISPATCH_HANDOFF_2026-06-19.md  EMERGENCY_CONTROLS.md  EXECUTION_SPEED_REPORT.md  KAMINO_CREDIT_GO_LIVE.md  MONEY_PATH_TESTING.md  (+25 more)
(+2143 files in other folders)
