[package]
name = "pointer-fee"
version = "0.1.0"
description = "Pointer devnet platform fee vault (SOL)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pointer_fee"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
